test/sema/negative/lvalue_inc_dec.impala
fn main() -> () {
    let mut i = 23;
    (i++)++;
    (++i)++;
    (i--)--;
    (--i)--;
}
